--- a/.gitignore
+++ b/.gitignore
@@ -344,3 +344,8 @@ healthchecksdb
 /lab6-5-5/B.txt
 /lab6-5-5/prod.txt
 /lab8/input.txt
+/lab9/input.txt
+/lab9/D.txt
+/lab9/C.txt
+/lab9/B.txt
+/lab9/A.txt
